MDEV-4635 Crash in UNIX_TIMESTAMP(STR_TO_DATE('2020','%Y'))

modified:
  mysql-test/r/func_time.result
  mysql-test/t/func_time.test
  sql/item_timefunc.cc
  sql/mysql_priv.h